--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 databases:
-  - name: the-prettiest-price
-    databaseName: the-prettiest-price
+  - name: theprettiestprice
+    databaseName: theprettiestprice
     plan: free # make sure to set this to free or you'll get billed $$$
-    user: the-prettiest-price
+    user: theprettiestprice
 
 services:
   - type: web
-    name: the-prettiest-price
+    name: theprettiestprice
     runtime: ruby
     env: ruby # this app is written in ruby
     plan: free # make sure to set this to free or you'll get billed $$$
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: the-prettiest-price
+          name: theprettiestprice
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
